# gcp-billing-guardrails

./: .env.example  .gitignore  Makefile  README.md  gcloud-agent.sh  index.js  package.json  pyproject.toml  setup.sh
_agents/skills/ai-cost-protection/: SKILL.md
_agents/skills/ai-cost-protection/references/: model-pricing.md  overrun-postmortem.md
_agents/skills/billing-admin/: SKILL.md
_agents/skills/billing-admin/references/: manage-budget.md  verify-setup.md
_agents/skills/billing-admin/scripts/: repair-billing.sh  verify-billing.sh
_agents/skills/devops-orchestrator/: SKILL.md
_agents/skills/devops-orchestrator/references/: pipeline-phases.md
_agents/skills/gcloud-executor/: SKILL.md
_agents/skills/gcloud-executor/references/: installation.md  pubsub-testing.md
_agents/skills/qa-testing/: SKILL.md
_agents/skills/qa-testing/references/: expected-log-output.md
_agents/skills/qa-testing/scripts/: test-hard-limit.sh  test-soft-limit.sh
guardrails/: __init__.py  veo_call_guard.py
scripts/: pre-commit.sh
tests/: test_veo_call_guard.py
